--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Anandanilayam Builders And Developers</title>
+    <!-- Link to Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+<body>
+    <!-- Header Section -->
+    <header class="bg-dark text-white text-center py-5">
+        <h1>Anandanilayam Builders And Developers</h1>
+        <p>Building Dreams, Creating Communities</p>
+    </header>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+    <!-- Navigation Section -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="#">Anandanilayam Builders</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#about">About Us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#services">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#projects">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- About Section -->
+    <section id="about" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-4">About Us</h2>
+            <p class="lead text-center">Anandanilayam Builders And Developers is a leading construction company focused on transforming
+                visions into reality. We specialize in residential, commercial, and infrastructure projects, delivering excellence with every build.</p>
+        </div>
+    </section>
+
+    <!-- Services Section -->
+    <section id="services" class="bg-light py-5">
+        <div class="container">
+            <h2 class="text-center mb-4">Our Services</h2>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <h5 class="card-title">Residential Construction</h5>
+                            <p class="card-text">Custom homes and apartment complexes.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <h5 class="card-title">Commercial Development</h5>
+                            <p class="card-text">Office spaces and retail outlets.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <h5 class="card-title">Infrastructure Projects</h5>
+                            <p class="card-text">Roads, bridges, and community facilities.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <h5 class="card-title">Renovations & Remodeling</h5>
+                            <p class="card-text">Upgrading and modernizing existing structures.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-4">Our Projects</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Anand Heights">
+                        <div class="card-body">
+                            <h5 class="card-title">Anand Heights</h5>
+                            <p class="card-text">A premium residential complex with sustainable design and modern amenities.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="TechHub Towers">
+                        <div class="card-body">
+                            <h5 class="card-title">TechHub Towers</h5>
+                            <p class="card-text">A commercial office building with cutting-edge infrastructure.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="EcoVille Villas">
+                        <div class="card-body">
+                            <h5 class="card-title">EcoVille Villas</h5>
+                            <p class="card-text">An eco-friendly gated community with green spaces and modern living.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+ <!-- Contact Section -->
+ <section id="contact" class="bg-light py-5">
+  <div class="container">
+      <h2 class="text-center mb-4">Contact Us</h2>
+      <p class="text-center">Email: <a href="mailto:contact@anandanilayam.com">contact@anandanilayam.com</a></p>
+      <p class="text-center">Phone: +1 (555) 123-4567</p>
+      <p class="text-center">Address: 123 Ananda Street, Urbanville, State, Country</p>
+  </div>
+</section>
+
+
+    <!-- Gallery Section -->
+<section id="gallery" class="py-5">
+  <div class="container">
+      <h2 class="text-center mb-4">Project Gallery</h2>
+      <div class="row">
+          <div class="col-md-4">
+              <div class="card mb-4">
+                  <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Project Image 1">
+                  <div class="card-body">
+                      <h5 class="card-title">Gallery Image 1</h5>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card mb-4">
+                  <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Project Image 2">
+                  <div class="card-body">
+                      <h5 class="card-title">Gallery Image 2</h5>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card mb-4">
+                  <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Project Image 3">
+                  <div class="card-body">
+                      <h5 class="card-title">Gallery Image 3</h5>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+<!-- Testimonials Section -->
+<section id="testimonials" class="bg-light py-5">
+  <div class="container">
+      <h2 class="text-center mb-4">What Our Clients Say</h2>
+      <div class="row">
+          <div class="col-md-4">
+              <div class="card mb-4">
+                  <div class="card-body">
+                      <p class="card-text">"Anandanilayam Builders transformed our vision into reality. Highly recommend their services!"</p>
+                      <footer class="blockquote-footer">John Doe, CEO of TechHub</footer>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card mb-4">
+                  <div class="card-body">
+                      <p class="card-text">"Their professionalism and attention to detail are unmatched. Our new office is amazing!"</p>
+                      <footer class="blockquote-footer">Jane Smith, Business Owner</footer>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card mb-4">
+                  <div class="card-body">
+                      <p class="card-text">"Best construction company for eco-friendly and sustainable projects. Very satisfied with the results!"</p>
+                      <footer class="blockquote-footer">Sara Lee, Homeowner</footer>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+
+   
+
+    
+   <!-- Footer Section -->
+<footer class="bg-dark text-white text-center py-3">
+  <p>&copy; 2024 Anandanilayam Builders And Developers. All rights reserved.</p>
+  <div>
+      <a href="https://facebook.com" target="_blank" class="text-white mx-2"><i class="fab fa-facebook"></i> Facebook</a>
+      <a href="https://twitter.com" target="_blank" class="text-white mx-2"><i class="fab fa-twitter"></i> Twitter</a>
+      <a href="https://linkedin.com" target="_blank" class="text-white mx-2"><i class="fab fa-linkedin"></i> LinkedIn</a>
+  </div>
+</footer>
+
+
+    <!-- Bootstrap JS and Popper.js (for interactive elements like the navbar) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
+
+
+
+    
+</body>
+
 </html>
